--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/custom.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -17,8 +18,32 @@
     <![endif]-->
   </head>
   <body>
-    <h1>Wireframe Demo</h1>
-    <p>Start here...</p>
+
+    <div class="navbar navbar-default" role="navigation">
+        <div class="container-fluid">
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#"><img src="img/logo.png" style=height:100%;></a>
+          </div>
+          <div class="navbar-collapse collapse">
+            
+            <ul class="nav navbar-nav navbar-right">
+              <li class="active"><a href="https://basecamp.com/start">See prices & start a free trial</a></li>
+              <li><a href="https://basecamp.com/tour">Check out an example project</a></li>
+              <li><a href="https://basecamp.com/support">Support</a></li>
+              <li><a class="btn btn-success btn-sm" href="https://launchpad.37signals.com/basecamp">Log In</a></li>
+            </ul>
+          </div><!--/.nav-collapse -->
+        </div><!--/.container-fluid -->
+      </div>
+
+
+  
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
